[package]
name = "dango"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "chatgpt powered voice assistant"
repository = "https://github.com/KaratsubaLabs/dango"

[workspace]
members = [
    "crates/dango_client",
    "crates/dango_fn",
    "crates/dango_fn_derive",
]

[features]

[dependencies]
dango_client = { path = "crates/dango_client" }
dango_fn = { path = "crates/dango_fn" }
dango_fn_derive = { path = "crates/dango_fn_derive" }

reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1"

dotenv = { version = "0.15" }

log = "0.4"
env_logger = "0.10"
