[package]
name = "dango_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "chatgpt powered voice assistant"
repository = "https://github.com/KaratsubaLabs/dango"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }

derive_builder = { version = "0.12" }
serde_json = "1"

log = "0.4"
env_logger = "0.10"

thiserror = "1"
anyhow = "1"

